--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -88,7 +88,7 @@
     <string name="skip">Skip</string>
     <string name="sync_interval">Synchronization interval</string>
     <string name="actions">Actions</string>
-    <string name="sync_layers">Layers</string>
+    <string name="sync_layers">Set layers</string>
     <string name="sync_layers_summary">Check layers to synchronize with server</string>
     <string name="layer_group">Group</string>
     <string name="layer_ngw_raster">NGW Raster</string>
@@ -308,7 +308,7 @@
     <string name="web_map">Web map</string>
     <string name="no_features">Layer has no features</string>
     <string name="error_export_geojson">Can not create geojson output</string>
-    <string name="attributes">Attributes</string>
+    <string name="attributes">Features table</string>
     <string name="error_cache">Bad cache, try rebuild it in layer settings</string>
     <string name="menu_send_to_ngw">Send to NextGIS</string>
     <string name="commercial">Available in commercial version</string>
