--- a/src/main/res/values-pt-rBR/strings.xml
+++ b/src/main/res/values-pt-rBR/strings.xml
@@ -4,7 +4,7 @@
   ~ Author:   Maxim Dubinin, maxim.dubinin@nextgis.com
   ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
   ~ ******************************************************************************
-  ~ Copyright (c) 2016 NextGIS, info@nextgis.com
+  ~ Copyright (c) 2016-2017 NextGIS, info@nextgis.com
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU Lesser Public License as published by
@@ -44,15 +44,14 @@
     <string name="login">Sign in</string>
     <string name="user_name">Login</string>
     <string name="canceled">Canceled</string>
-    <string name="account_already_exists">Account already exist</string>
+    <string name="ngw_account_already_exists">Account already exist</string>
     <string name="error_login">Login failed</string>
-    <string name="add_nextgis">Add from NextGIS</string>
-    <string name="ngw_settings">NextGIS settings</string>
-    <string name="add_account">Add account</string>
-    <string name="delete_account">Delete account</string>
-    <string name="delete_account_ask">Delete account?</string>
-    <string name="delete_account_summary">Delete account. All layers connected with this account will be deleted too. Active synchronization will be stopped.</string>
-    <string name="delete_account_warn_msg">Account will be deleted!\nAll account layers will be deleted!\nCurrent sync will be stopped!</string>
+    <string name="ngw_layer_add">Add from Web GIS</string>
+    <string name="ngw_accounts">Web GIS</string>
+    <string name="ngw_account_add">Add Web GIS</string>
+    <string name="ngw_account_delete">Delete account</string>
+    <string name="ngw_account_delete_summary">All layers connected with this account will be deleted.\nActive synchronization will be stopped.</string>
+    <string name="ngw_account_delete_warn_msg">Account will be deleted!\nAll account layers will be deleted!\nCurrent sync will be stopped!</string>
     <string name="waiting">Please wait</string>
     <string name="wait_sync_stopping">Waiting of synchronization stopping</string>
     <string name="add">Add</string>
@@ -62,7 +61,6 @@
     <string name="up_dots">..</string>
     <string name="up">Up</string>
     <string name="resource_group">Resource group</string>
-    <string name="accounts">Accounts</string>
     <string name="raster">Raster</string>
     <string name="vector">Vector</string>
     <string name="raster_layer">Raster layer</string>
@@ -115,7 +113,7 @@
     <string name="two_hours">2 hours</string>
     <string name="sync_set_interval">Set synchronization interval</string>
     <string name="last_sync_time">Synced %1$s at %2$s</string>
-    <string name="warning_different_credentials">Existing account differs the one from form. The existing account will be used</string>
+    <string name="ngw_different_credentials">Existing account differs the one from form. The existing account will be used</string>
     <string name="error_no_location">No location</string>
     <string name="error_layer_not_inited">Layer is not initialized. Abort</string>
     <string name="n_a">n/a</string>
@@ -273,9 +271,9 @@
     <string name="replace_field_rule">All rules will be deleted due to changing rule field. Are you sure?</string>
     <string name="new_gis">Create GIS</string>
     <string name="manual_ngw">Switch to advanced</string>
-    <string name="instance_name">Instance name</string>
+    <string name="instance_name">Web GIS name</string>
     <string name="ngw_from_my_nextgis">Do you have GIS? Sign up at my.nextgis.com to get your own one!</string>
-    <string name="new_account">Sign up in nextgis.com</string>
+    <string name="ngid_account_new">Sign up</string>
     <string name="guest">Guest</string>
     <string name="field_not_filled">Some fields are empty</string>
     <string name="web_map">Web map</string>
@@ -289,7 +287,7 @@
     <string name="error_cache">Bad cache, try rebuild it in layer settings</string>
     <string name="sync_disable">Disable sync</string>
     <string name="sync_enable">Enable sync</string>
-    <string name="account">Account - %1$s</string>
+    <string name="ngw_account">Account - %1$s</string>
     <string name="menu_send_to_ngw">Send to NextGIS</string>
     <string name="sync_disabled">Sync disabled</string>
     <string name="sync_enable_error">Error enabling sync</string>
@@ -316,4 +314,10 @@
     <string name="to_ngw">To server only</string>
     <string name="from_ngw">From server only</string>
     <string name="both_directions">Both directions</string>
+    <string name="ngid_settings">Account</string>
+    <string name="ngid_username">Username</string>
+    <string name="ngid_email">E-mail</string>
+    <string name="ngid_first_name">First name</string>
+    <string name="ngid_last_name">Last name</string>
+    <string name="ngid_my">my.nextgis.com</string>
 </resources>
