--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -5,7 +5,7 @@
   ~ Author:   NikitaFeodonit, nfeodonit@yandex.com
   ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
   ~ ******************************************************************************
-  ~ Copyright (c) 2012-2016 NextGIS, info@nextgis.com
+  ~ Copyright (c) 2012-2017 NextGIS, info@nextgis.com
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU Lesser Public License as published by
@@ -45,16 +45,15 @@
     <string name="login">Войти</string>
     <string name="user_name">Имя пользователя</string>
     <string name="canceled">Отменено</string>
-    <string name="account_already_exists">Учетная запись уже существует</string>
+    <string name="ngw_account_already_exists">Учетная запись уже существует</string>
     <string name="error_login">Ошибка входа</string>
-    <string name="add_nextgis">Добавить из NextGIS</string>
-    <string name="ngw_settings">Настройки NextGIS</string>
-    <string name="new_account">Завести учетную запись в nextgis.com</string>
-    <string name="add_account">Добавить аккаунт</string>
-    <string name="delete_account">Удалить учетную запись</string>
-    <string name="delete_account_ask">Удалить учетную запись?</string>
-    <string name="delete_account_summary">Удаление учетной записи. Все слои связанные с этой учетной записью тоже будут удалены. Синхронизация будет остановлена.</string>
-    <string name="delete_account_warn_msg">Учетная запись будет удалена!\nВсе слои будут удалены!\nСинхронизация будет остановлена!</string>
+    <string name="ngw_layer_add">Добавить из Веб ГИС</string>
+    <string name="ngw_accounts">Веб ГИС</string>
+    <string name="ngid_account_new">Зарегистрироваться</string>
+    <string name="ngw_account_add">Добавить Веб ГИС</string>
+    <string name="ngw_account_delete">Удалить учетную запись</string>
+    <string name="ngw_account_delete_summary">Все слои связанные с этой учетной записью будут удалены.\nСинхронизация будет остановлена.</string>
+    <string name="ngw_account_delete_warn_msg">Учетная запись будет удалена!\nВсе слои будут удалены!\nСинхронизация будет остановлена!</string>
     <string name="waiting">Пожалуйста подождите</string>
     <string name="wait_sync_stopping">Ожидание остановки синхронизации</string>
     <string name="add">Добавить</string>
@@ -64,7 +63,6 @@
     <string name="up_dots">..</string>
     <string name="up">Вверх</string>
     <string name="resource_group">Группа ресурсов</string>
-    <string name="accounts">Учетные записи</string>
     <string name="raster">Растр</string>
     <string name="vector">Вектор</string>
     <string name="raster_layer">Растровый слой</string>
@@ -117,7 +115,7 @@
     <string name="two_hours">2 часа</string>
     <string name="sync_set_interval">Установить интервал синхронизации</string>
     <string name="last_sync_time">Обновлено %1$s в %2$s</string>
-    <string name="warning_different_credentials">Существующая учетная запись отличается от введенных параметров. Будет использоваться существующая учетная запись.</string>
+    <string name="ngw_different_credentials">Существующая учетная запись отличается от введенных параметров. Будет использоваться существующая учетная запись.</string>
     <string name="error_no_location">Координаты не определены</string>
     <string name="error_layer_not_inited">Слой не инициализирован. Отмена</string>
     <string name="n_a">н/д</string>
@@ -290,7 +288,7 @@
     <string name="error_cache">Неверный кэш, перестройте в настройках слоя</string>
     <string name="sync_disable">Отключить синхронизацию</string>
     <string name="sync_enable">Включить синхронизацию</string>
-    <string name="account">Аккаунт - %1$s</string>
+    <string name="ngw_account">Аккаунт - %1$s</string>
     <string name="menu_send_to_ngw">Отправить в NextGIS</string>
     <string name="sync_disabled">Синхронизация отключена</string>
     <string name="sync_enable_error">Ошибка при включении синхронизации</string>
@@ -317,4 +315,10 @@
     <string name="to_ngw">Только на сервер</string>
     <string name="from_ngw">Только с сервера</string>
     <string name="both_directions">В обе стороны</string>
+    <string name="ngid_settings">Учетная запись</string>
+    <string name="ngid_email">E-mail</string>
+    <string name="ngid_first_name">Имя</string>
+    <string name="ngid_last_name">Фамилия</string>
+    <string name="ngid_username">Имя пользователя</string>
+    <string name="ngid_my">my.nextgis.com</string>
 </resources>
