--- a/src/main/res/values-uk/strings.xml
+++ b/src/main/res/values-uk/strings.xml
@@ -4,7 +4,7 @@
   ~ Author:   Maxim Dubinin, maxim.dubinin@nextgis.com
   ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
   ~ ******************************************************************************
-  ~ Copyright (c) 2016 NextGIS, info@nextgis.com
+  ~ Copyright (c) 2016-2017 NextGIS, info@nextgis.com
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU Lesser Public License as published by
@@ -44,14 +44,13 @@
     <string name="login">Войти</string>
     <string name="user_name">Логін</string>
     <string name="canceled">Скасовано</string>
-    <string name="account_already_exists">Акаунт вже існує</string>
+    <string name="ngw_account_already_exists">Акаунт вже існує</string>
     <string name="error_login">Помилка входу</string>
-    <string name="add_nextgis">Додати из NextGIS</string>
-    <string name="ngw_settings">Налаштування NextGIS </string>
-    <string name="add_account">Добавить аккаунт</string>
-    <string name="delete_account">Видалити акаунт</string>
-    <string name="delete_account_ask">Видалити акаунт?</string>
-    <string name="delete_account_summary">Аккаунт буде видалений!\nВсі шари акаунту будуть видалені!\nПоточна синхронізація буде зупинена!</string>
+    <string name="ngw_layer_add">Добавить из Веб ГИС</string>
+    <string name="ngw_accounts">Веб ГИС</string>
+    <string name="ngw_account_add">Добавить Веб ГИС</string>
+    <string name="ngw_account_delete">Видалити акаунт</string>
+    <string name="ngw_account_delete_summary">Аккаунт буде видалений!\nВсі шари акаунту будуть видалені!\nПоточна синхронізація буде зупинена!</string>
     <string name="waiting">Пожалуйста подождите</string>
     <string name="wait_sync_stopping">Очікування зупинки синхронізації</string>
     <string name="add">Додати</string>
@@ -61,7 +60,6 @@
     <string name="up_dots">..</string>
     <string name="up">Вгору</string>
     <string name="resource_group">Групи ресурсів</string>
-    <string name="accounts">Акаунти</string>
     <string name="raster">Растр</string>
     <string name="vector">Вектор</string>
     <string name="raster_layer">Растровий шар</string>
@@ -114,7 +112,7 @@
     <string name="two_hours">2 hours</string>
     <string name="sync_set_interval">Set synchronization interval</string>
     <string name="last_sync_time">Synced %1$s at %2$s</string>
-    <string name="warning_different_credentials">Existing account differs the one from form. The existing account will be used</string>
+    <string name="ngw_different_credentials">Existing account differs the one from form. The existing account will be used</string>
     <string name="error_no_location">No location</string>
     <string name="error_layer_not_inited">Layer is not initialized. Abort</string>
     <string name="n_a">n/a</string>
@@ -269,13 +267,13 @@
     <string name="rules">Правила</string>
     <string name="default_style">Стиль по-умолчанию</string>
     <string name="value">Значение</string>
-    <string name="delete_account_warn_msg">Учетная запись будет удалена!\nВсе слои будут удалены!\nСинхронизация будет остановлена!</string>
+    <string name="ngw_account_delete_warn_msg">Аккаунт буде видалений!\nВсі шари акаунту будуть видалені!\nПоточна синхронізація буде зупинена!</string>
     <string name="replace_field_rule">Все текущие правила будут удалены из-за смены поля для правила. Вы уверены?</string>
     <string name="new_gis">Создать ГИС</string>
     <string name="manual_ngw">Расширенные настройки</string>
     <string name="instance_name">Имя ГИС</string>
     <string name="ngw_from_my_nextgis">Еще нет своей ГИС? Зарегистрируйтесь на my.nextgis.com и создайте!</string>
-    <string name="new_account">Завести учетную запись в nextgis.com</string>
+    <string name="ngid_account_new">Зарегистрироваться</string>
     <string name="guest">Гость</string>
     <string name="field_not_filled">Некоторые поля пустые</string>
     <string name="web_map">Веб карта</string>
@@ -289,7 +287,7 @@
     <string name="error_cache">Неверный кэш, перестройте в настройках слоя</string>
     <string name="sync_disable">Отключить синхронизацию</string>
     <string name="sync_enable">Включить синхронизацию</string>
-    <string name="account">Акаунт - %1$s</string>
+    <string name="ngw_account">Акаунт - %1$s</string>
     <string name="menu_send_to_ngw">Отправить в NextGIS</string>
     <string name="sync_disabled">Синхронизация отключена</string>
     <string name="sync_enable_error">Ошибка при включении синхронизации</string>
@@ -316,4 +314,10 @@
     <string name="to_ngw">Только на сервер</string>
     <string name="from_ngw">Только с сервера</string>
     <string name="both_directions">В обе стороны</string>
+    <string name="ngid_settings">Учетная запись</string>
+    <string name="ngid_username">Имя пользователя</string>
+    <string name="ngid_email">E-mail</string>
+    <string name="ngid_first_name">Имя</string>
+    <string name="ngid_last_name">Фамилия</string>
+    <string name="ngid_my">my.nextgis.com</string>
 </resources>
