--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -321,4 +321,6 @@
     <string name="ngid_last_name">Фамилия</string>
     <string name="ngid_username">Имя пользователя</string>
     <string name="ngid_my">my.nextgis.com</string>
+    <string name="sign_out">Sign out</string>
+    <string name="not_set">Не задано</string>
 </resources>
