--- a/src/main/res/values-uk/strings.xml
+++ b/src/main/res/values-uk/strings.xml
@@ -322,4 +322,5 @@
     <string name="ngid_my">my.nextgis.com</string>
     <string name="sign_out">Выйти</string>
     <string name="not_set">Не задано</string>
+    <string name="ngid_account_ask">Еще нет своего аккаунта?</string>
 </resources>
