--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -325,4 +325,5 @@
     <string name="ngid_my">my.nextgis.com</string>
     <string name="sign_out">Sign out</string>
     <string name="not_set">Not set</string>
+    <string name="ngid_account_ask">Do not have account?</string>
 </resources>
