Redesign intro screen

--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -324,4 +324,5 @@
     <string name="not_set">Не задано</string>
     <string name="sign_out">Выйти</string>
     <string name="ngid_account_ask">Еще нет своего аккаунта?</string>
+    <string name="sign_in_tip">для больших возможностей, синхронизации и получения обновлений</string>
 </resources>
