--- a/src/main/res/values-cs/strings.xml
+++ b/src/main/res/values-cs/strings.xml
@@ -324,4 +324,5 @@
     <string name="sign_out">Sign out</string>
     <string name="not_set">Not set</string>
     <string name="ngid_account_ask">Do not have account?</string>
+    <string name="sign_in_tip">to get more features, better synchronization and updates</string>
 </resources>
