Add ngfp meta table support

--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -325,4 +325,5 @@
     <string name="sign_out">Выйти</string>
     <string name="ngid_account_ask">Еще нет своего аккаунта?</string>
     <string name="sign_in_tip">для больших возможностей, синхронизации и получения обновлений</string>
+    <string name="select_row">Выберите поле</string>
 </resources>
