--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -327,4 +327,5 @@
     <string name="not_set">Not set</string>
     <string name="ngid_account_ask">Do not have account?</string>
     <string name="sign_in_tip">to get more features, better synchronization and updates</string>
+    <string name="select_row">Select row</string>
 </resources>
