--- a/src/main/res/values-uk/strings.xml
+++ b/src/main/res/values-uk/strings.xml
@@ -37,21 +37,21 @@
     <string name="tmstype_osm">XYZ (OSM)</string>
     <string name="tmstype_normal">TMS (OSGeo spec.)</string>
     <string name="error_invalid_url">Посилання недійсне</string>
-    <string name="qms_unavailable">Сервер геосервисов недоступен</string>
+    <string name="qms_unavailable">Сервер геосервісів недоступний</string>
     <string name="nextgis_web">NextGIS</string>
     <string name="ngw_url">Посилання на NextGIS Web</string>
     <string name="password">Пароль</string>
-    <string name="login">Войти</string>
+    <string name="login">Увійти</string>
     <string name="user_name">Логін</string>
     <string name="canceled">Скасовано</string>
     <string name="ngw_account_already_exists">Акаунт вже існує</string>
     <string name="error_login">Помилка входу</string>
-    <string name="ngw_layer_add">Добавить из Веб ГИС</string>
-    <string name="ngw_accounts">Веб ГИС</string>
-    <string name="ngw_account_add">Добавить Веб ГИС</string>
+    <string name="ngw_layer_add">Додати з Веб ГІС</string>
+    <string name="ngw_accounts">Веб ГІС</string>
+    <string name="ngw_account_add">Додати Веб ГІС</string>
     <string name="ngw_account_delete">Видалити акаунт</string>
-    <string name="ngw_account_delete_summary">Аккаунт буде видалений!\nВсі шари акаунту будуть видалені!\nПоточна синхронізація буде зупинена!</string>
-    <string name="waiting">Пожалуйста подождите</string>
+    <string name="ngw_account_delete_summary">Акаунт буде видалений!\nВсі шари акаунту будуть видалені!\nПоточна синхронізація буде зупинена!</string>
+    <string name="waiting">Будь ласка, зачекайте</string>
     <string name="wait_sync_stopping">Очікування зупинки синхронізації</string>
     <string name="add">Додати</string>
     <string name="select">Вибрати</string>
@@ -72,13 +72,13 @@
     <string name="auto_sync_summary">Синхронізація через регулярні інтервали</string>
     <string name="sync_interval">Інтервал синхронізації</string>
     <string name="actions">Дії</string>
-    <string name="sync_layers">Настроить слои</string>
+    <string name="sync_layers">Налаштувати шари</string>
     <string name="sync_layers_summary">Перевірка шарів для синхронізації з сервером</string>
     <string name="layer_group">Група</string>
     <string name="layer_ngw_raster">Растр NGW</string>
     <string name="layer_ngw_vector">Шар NGW</string>
     <string name="layer_tms">Тайловий растр</string>
-    <string name="layer_na">Не доступний</string>
+    <string name="layer_na">Недоступний</string>
     <string name="latitude_caption">Широта</string>
     <string name="longitude_caption">Довгота</string>
     <string name="altitude_caption">Висота</string>
@@ -88,74 +88,74 @@
     <string name="longitude_caption_short">Дов.</string>
     <string name="altitude_caption_short">Вис.</string>
     <string name="accuracy_caption_short">Точ.</string>
-    <string name="accurate_location">Accurate location</string>
-    <string name="accurate_taking">Accumulating and averaging location…</string>
-    <string name="action_settings">Settings</string>
-    <string name="do_not_ask_again">Больше не спрашивать</string>
-    <string name="apply">Apply</string>
-    <string name="error_db_insert">Insert feature failed</string>
-    <string name="error_db_update">Update feature failed</string>
-    <string name="error_db_query">Query feature failed</string>
-    <string name="error_db_delete">Delete feature failed</string>
-    <string name="create_vector_layer">Create vector layer</string>
-    <string name="new_layer">New layer</string>
-    <string name="message_layer_created">Layer created</string>
-    <string name="feature_n">Feature #%1$d</string>
-    <string name="new_feature">New feature</string>
-    <string name="error_form_create">Form create failed</string>
-    <string name="system_default">System default</string>
-    <string name="five_minutes">5 minutes</string>
-    <string name="ten_minutes">10 minutes</string>
-    <string name="fifteen_minutes">15 minutes</string>
-    <string name="thirty_minutes">30 minutes</string>
-    <string name="one_hour">1 hour</string>
-    <string name="two_hours">2 hours</string>
-    <string name="sync_set_interval">Set synchronization interval</string>
-    <string name="last_sync_time">Synced %1$s at %2$s</string>
+    <string name="accurate_location">Уточнити координати місцезнаходження</string>
+    <string name="accurate_taking">Накопичення й усереднення координат…</string>
+    <string name="action_settings">Налаштування</string>
+    <string name="do_not_ask_again">Більше не питати</string>
+    <string name="apply">Застосувати</string>
+    <string name="error_db_insert">Помилка додавання об'єкта</string>
+    <string name="error_db_update">Помилка оновлення об'єкта</string>
+    <string name="error_db_query">Помилка запиту до об'єкта</string>
+    <string name="error_db_delete">Помилка видалення об'єкта</string>
+    <string name="create_vector_layer">Створити векторний шар</string>
+    <string name="new_layer">Новий шар</string>
+    <string name="message_layer_created">Шар створено</string>
+    <string name="feature_n">Об'єкт #%1$d</string>
+    <string name="new_feature">Новий об'єкт</string>
+    <string name="error_form_create">Помилка створення форми</string>
+    <string name="system_default">Параметри за промовчанням</string>
+    <string name="five_minutes">5 хвилин</string>
+    <string name="ten_minutes">10 хвилин</string>
+    <string name="fifteen_minutes">15 хвилин</string>
+    <string name="thirty_minutes">30 хвилин</string>
+    <string name="one_hour">1 година</string>
+    <string name="two_hours">2 години</string>
+    <string name="sync_set_interval">Встановити інтервал синхронізації</string>
+    <string name="last_sync_time">Синхронізовано %1$s о %2$s</string>
     <string name="ngw_different_credentials">Existing account differs the one from form. The existing account will be used</string>
-    <string name="error_no_location">No location</string>
-    <string name="error_layer_not_inited">Layer is not initialized. Abort</string>
+    <string name="error_no_location">Не вдається визначити місцезнаходження</string>
+    <string name="error_layer_not_inited">Шар не започатковано. Припинено</string>
     <string name="n_a">n/a</string>
-    <string name="layer_vector">Vector layer</string>
+    <string name="layer_vector">Векторний шар</string>
     <string name="layer_permanent">It\'s permanent layer</string>
-    <string name="empty_tracks">There are no recorded tracks yet.</string>
-    <string name="menu_delete">Delete</string>
-    <string name="menu_select_all">Select all</string>
-    <string name="menu_share">Share</string>
-    <string name="menu_visibility_on">Show</string>
-    <string name="menu_visibility_off">Hide</string>
-    <string name="nothing_selected">Nothing is selected</string>
-    <string name="unclosed_track_deleted">Current track is deleted too</string>
-    <string name="folder">Folder</string>
-    <string name="zip">ZIP file</string>
-    <string name="formbuilder">FormBuilder file</string>
-    <string name="geojson">GeoJSON file</string>
-    <string name="add_point">Add point</string>
-    <string name="edit_attributes">Edit attributes</string>
-    <string name="move_point_to_current_location">Point to current location</string>
-    <string name="delete_point">Delete point</string>
-    <string name="add_multipoint">Add multipoint</string>
-    <string name="delete_multipoint">Delete multipoint</string>
-    <string name="delete_item_done">Item deleted</string>
-    <string name="delete_layer_done">Layer deleted</string>
-    <string name="add_line">Add line</string>
-    <string name="delete_line">Delete line</string>
-    <string name="edit_by_walk">Append geometry by walk</string>
-    <string name="add_multilinestring">Add multilinestring</string>
-    <string name="delete_multilinestring">Delete multilinestring</string>
-    <string name="add_polygon">Add polygon</string>
-    <string name="add_hole">Add hole</string>
-    <string name="delete_polygon">Delete polygon</string>
-    <string name="delete_hole">Delete hole</string>
-    <string name="add_multipolygon">Add multipolygon</string>
-    <string name="delete_multipolygon">Delete multipolygon</string>
-    <string name="save">Save</string>
-    <string name="undo">Undo</string>
-    <string name="redo">Redo</string>
-    <string name="retry">Retry</string>
-    <string name="error_create_feature">Create feature failed</string>
-    <string name="no">No</string>
-    <string name="yes">Yes</string>
+    <string name="empty_tracks">Немає жодного записаного треку.</string>
+    <string name="menu_delete">Видалити</string>
+    <string name="menu_select_all">Обрати все</string>
+    <string name="menu_share">Поділитися</string>
+    <string name="menu_visibility_on">Показати</string>
+    <string name="menu_visibility_off">Приховати</string>
+    <string name="nothing_selected">Нічого не обрано</string>
+    <string name="unclosed_track_deleted">Поточний трек видалено</string>
+    <string name="folder">Папка</string>
+    <string name="zip">ZIP файл</string>
+    <string name="formbuilder">FormBuilder файл</string>
+    <string name="geojson">GeoJSON файл</string>
+    <string name="add_point">Додати точку</string>
+    <string name="edit_attributes">Редагувати атрибутивну інформацію</string>
+    <string name="move_point_to_current_location">Перемістити точку у поточне місцезнаходження</string>
+    <string name="delete_point">Видалити точку</string>
+    <string name="add_multipoint">Додати мультиточку</string>
+    <string name="delete_multipoint">Видалити мультиточку</string>
+    <string name="delete_item_done">Об'єкт видалено</string>
+    <string name="delete_layer_done">Шар видалено</string>
+    <string name="add_line">Додати лінію</string>
+    <string name="delete_line">Видалити лінію</string>
+    <string name="edit_by_walk">Додати геометрію обходом</string>
+    <string name="add_multilinestring">Додати мільтилінію</string>
+    <string name="delete_multilinestring">Видалити мультилінію</string>
+    <string name="add_polygon">Додати полігон</string>
+    <string name="add_hole">Додати отвір</string>
+    <string name="delete_polygon">Видалити полігон</string>
+    <string name="delete_hole">Видалити отвір</string>
+    <string name="add_multipolygon">Додати мультиполігон</string>
+    <string name="delete_multipolygon">Видалити мультиполігон</string>
+    <string name="save">Зберегти</string>
+    <string name="undo">Скасувати</string>
+    <string name="redo">Поновити</string>
+    <string name="retry">Повторити спробу</string>
+    <string name="error_create_feature">Помилка створення об'єкта</string>
+    <string name="no">Ні</string>
+    <string name="yes">Так</string>
     <string name="has_edits">There are unsaved edits. Do you want to save them?</string>
     <string name="attributes_next">Next</string>
     <string name="attributes_prev">Previous</string>
