--- a/src/main/res/values-uk/strings.xml
+++ b/src/main/res/values-uk/strings.xml
@@ -93,15 +93,15 @@
     <string name="action_settings">Налаштування</string>
     <string name="do_not_ask_again">Більше не питати</string>
     <string name="apply">Застосувати</string>
-    <string name="error_db_insert">Помилка додавання об'єкта</string>
-    <string name="error_db_update">Помилка оновлення об'єкта</string>
-    <string name="error_db_query">Помилка запиту до об'єкта</string>
-    <string name="error_db_delete">Помилка видалення об'єкта</string>
+    <string name="error_db_insert">Помилка додавання об\'єкта</string>
+    <string name="error_db_update">Помилка оновлення об\'єкта</string>
+    <string name="error_db_query">Помилка запиту до об\'єкта</string>
+    <string name="error_db_delete">Помилка видалення об\'єкта</string>
     <string name="create_vector_layer">Створити векторний шар</string>
     <string name="new_layer">Новий шар</string>
     <string name="message_layer_created">Шар створено</string>
-    <string name="feature_n">Об'єкт #%1$d</string>
-    <string name="new_feature">Новий об'єкт</string>
+    <string name="feature_n">Об\'єкт #%1$d</string>
+    <string name="new_feature">Новий об\'єкт</string>
     <string name="error_form_create">Помилка створення форми</string>
     <string name="system_default">Параметри за промовчанням</string>
     <string name="five_minutes">5 хвилин</string>
@@ -136,7 +136,7 @@
     <string name="delete_point">Видалити точку</string>
     <string name="add_multipoint">Додати мультиточку</string>
     <string name="delete_multipoint">Видалити мультиточку</string>
-    <string name="delete_item_done">Об'єкт видалено</string>
+    <string name="delete_item_done">Об\'єкт видалено</string>
     <string name="delete_layer_done">Шар видалено</string>
     <string name="add_line">Додати лінію</string>
     <string name="delete_line">Видалити лінію</string>
@@ -153,7 +153,7 @@
     <string name="undo">Скасувати</string>
     <string name="redo">Поновити</string>
     <string name="retry">Повторити спробу</string>
-    <string name="error_create_feature">Помилка створення об'єкта</string>
+    <string name="error_create_feature">Помилка створення об\'єкта</string>
     <string name="no">Ні</string>
     <string name="yes">Так</string>
     <string name="has_edits">There are unsaved edits. Do you want to save them?</string>
